--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="i2037">
 <head>
 	<meta charset="utf-8">
 	<title>i2037</title>
