--- a/app/index.html
+++ b/app/index.html
@@ -61,9 +61,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span12" ng-view></div>
-      </div>
+      <div class="row-fluid" ng-view></div>
 
       <hr>
 
