--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
             </p>
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
+              <li ng-class="{active: $location.path() == '/recipies'}"><a href="#/recipies"><i class="icon-book"></i> Recipies</a></li>              
               <li ng-class="{active: $location.path() == '/wineview'}"><a href="#/wineview"><i class="icon-book"></i> Cellar</a></li>
               <li ng-class="{active: $location.path() == '/slickgrid'}"><a href="#/slickgrid">SlickGrid</a></li>
             </ul>
