--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
           <a class="brand" href="#">i2037</a>
           <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
-              Logged in as <a href="" ng-click="showForm()" class="navbar-link">{{userName}}</a>
+              <a href="" ng-click="showForm()" class="navbar-link">{{userName}}</a>
             </p>
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
@@ -86,7 +86,7 @@
     -->   
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
-    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.2.0.js"></script>
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
