--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
               <li ng-class="{active: $location.path() == '/recipes'}"><a href="#/recipes"><i class="icon-book"></i> Recipes</a></li>              
               <li ng-class="{active: $location.path() == '/wineview'}"><a href="#/wineview"><i class="icon-book"></i> Cellar</a></li>
-              <li ng-class="{active: $location.path() == '/slickgrid'}"><a href="#/slickgrid">SlickGrid</a></li>
+              <li ng-class="{active: $location.path() == '/cage'}"><a href="#/cage">Cage</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
