--- a/app/index.html
+++ b/app/index.html
@@ -47,14 +47,18 @@
           </button>
           <a class="brand" href="#">i2037</a>
           <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-              <a href="" ng-click="showForm()" class="navbar-link">{{userName}}</a>
-            </p>
+            <div class="dropdown pull-right navbar-text">
+              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown">{{getAccountLabel()}}</a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <li ng-hide="user"><a tabindex="-1" href="#" ng-click="login()">Login</a></li>
+                <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
+              </ul>
+            </div>
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
               <li ng-class="{active: $location.path() == '/recipes'}"><a href="#/recipes"><i class="icon-book"></i> Recipes</a></li>              
-              <li ng-class="{active: $location.path() == '/wineview'}"><a href="#/wineview"><i class="icon-book"></i> Cellar</a></li>
-              <li ng-class="{active: $location.path() == '/cage'}"><a href="#/cage">Cage</a></li>
+              <li ng-show="showCellar" ng-class="{active: $location.path() == '/wineview'}"><a href="#/wineview"><i class="icon-book"></i> Cellar</a></li>
+              <li ng-show="showCage" ng-class="{active: $location.path() == '/cage'}"><a href="#/cage">Cage</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
