--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -80,16 +80,17 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
-    <script src="lib/jquery-1.9.1.js"></script>
+    <script src="lib/jquery/jquery-1.10.2.min.js"></script>
+    <script src="lib/jquery/jquery.cookie.js"></script>    
     <script src="lib/slickgrid/jquery.event.drag-2.2.js"></script>
     <script src="lib/slickgrid/slick.core.js"></script>
     <script src="lib/slickgrid/slick.grid.js"></script>
-    <script src="lib/bootstrap/bootstrap.js"></script> 
+    <script src="lib/bootstrap/bootstrap.min.js"></script> 
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
     -->   
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular/angular-resource.min.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
