--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -86,18 +86,15 @@
     <script src="lib/slickgrid/slick.core.js"></script>
     <script src="lib/slickgrid/slick.grid.js"></script>
     <script src="lib/bootstrap/bootstrap.min.js"></script> 
-    <!-- In production use:
+<!-- @if NODE_ENV == 'DEV' -->  
+    <script src="lib/angular/angular.js"></script>
+    <script src="js/dev/i2037-client.js"></script>
+<!-- @endif -->
+<!-- @if NODE_ENV == 'PROD' -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-    -->   
-    <script src="lib/angular/angular.min.js"></script>
+    <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.min.js"></script>
+<!-- @endif -->
     <script src="lib/angular/angular-resource.min.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/filters.js"></script>
-    <script src="js/directives.js"></script>
-
-
 </body>
 </html>
