disable min version in prod build because it is broken

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -92,7 +92,7 @@
 <!-- @endif -->
 <!-- @if NODE_ENV == 'PROD' -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-    <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.min.js"></script>
+    <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.js"></script>
 <!-- @endif -->
     <script src="lib/angular/angular-resource.min.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
