Added moves map to cage

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -81,7 +81,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
 
     <script src="lib/jquery/jquery-1.10.2.min.js"></script>
-    <script src="lib/jquery/jquery.cookie.js"></script>    
+    <script src="lib/jquery/jquery.cookie.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="lib/slickgrid/jquery.event.drag-2.2.js"></script>
     <script src="lib/slickgrid/slick.core.js"></script>
     <script src="lib/slickgrid/slick.grid.js"></script>
@@ -95,6 +96,7 @@
     <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.js"></script>
 <!-- @endif -->
     <script src="lib/angular/angular-resource.min.js"></script>
-    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&sensor=false"></script>
 </body>
 </html>
