fixed path to prod angular

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -93,7 +93,7 @@
     <script src="js/dev/i2037-client.js"></script>
 <!-- @endif -->
 <!-- @if NODE_ENV == 'PROD' -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
     <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.js"></script>
 <!-- @endif -->
     <script src="lib/angular/angular-resource.min.js"></script>
