factored out controllers into features

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -57,7 +57,7 @@
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
               <li ng-class="{active: $location.path() == '/recipes'}"><a href="#/recipes"><i class="icon-book"></i> Recipes</a></li>              
-              <li ng-show="showCellar" ng-class="{active: $location.path() == '/wineview'}"><a href="#/wineview"><i class="icon-book"></i> Cellar</a></li>
+              <li ng-show="showCellar" ng-class="{active: $location.path() == '/cellar'}"><a href="#/cellar"><i class="icon-book"></i> Cellar</a></li>
               <li ng-show="showMoves" ng-class="{active: $location.path() == '/moves'}"><a href="#/moves"><i class="icon-book"></i> Moves</a></li>              
               <li ng-show="showCage" ng-class="{active: $location.path() == '/cage'}"><a href="#/cage"><i class="icon-book"></i> Cage</a></li>
             </ul>
