--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -50,16 +50,15 @@
             <div class="dropdown pull-right navbar-text">
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown">{{accountMenuLabel}}</a>
               <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                <li ng-show="showLogin"><a tabindex="-1" href="#" ng-click="login()">Login</a></li>
-                <li ng-show="showLogout"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
+                <li ng-show="!user"><a tabindex="-1" href="#" ng-click="login()">Login</a></li>
+                <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
               </ul>
             </div>
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
-              <li ng-class="{active: $location.path() == '/recipes'}"><a href="#/recipes"><i class="icon-book"></i> Recipes</a></li>              
-              <li ng-show="showCellar" ng-class="{active: $location.path() == '/cellar'}"><a href="#/cellar"><i class="icon-book"></i> Cellar</a></li>
-              <li ng-show="showMoves" ng-class="{active: $location.path() == '/moves'}"><a href="#/moves"><i class="icon-book"></i> Moves</a></li>              
-              <li ng-show="showCage" ng-class="{active: $location.path() == '/cage'}"><a href="#/cage"><i class="icon-book"></i> Cage</a></li>
+              <li ng-show="menu.isVisible" ng-class="{active: $location.path() == menu.path}" ng-repeat="menu in menus" ng-cloak>
+                <a href="#{{menu.path}}"><i class="icon-book"></i> {{menu.name}}</a>
+              </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
