--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -26,6 +26,10 @@
           padding-right: 5px;
         }
       }
+
+      [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+        display: none !important;
+      }
     </style>
 
 
