--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -52,7 +52,7 @@
           <a class="brand" href="#">i2037</a>
           <div class="nav-collapse collapse">
             <div class="dropdown pull-right navbar-text">
-              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown">{{accountMenuLabel}}</a>
+              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" ng-cloak>{{accountMenuLabel}}</a>
               <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                 <li ng-show="!user"><a tabindex="-1" href="#" ng-click="login()">Login</a></li>
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
