created button and spinner directives

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -94,7 +94,8 @@
     <script src="lib/slickgrid/slick.core.js"></script>
     <script src="lib/slickgrid/slick.grid.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>    
-    <script src="lib/bootstrap/bootstrap.min.js"></script> 
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
+    <script src="lib/spin/spin.min.js"></script> 
 <!-- @if NODE_ENV == 'DEV' -->  
     <script src="lib/angular/angular.js"></script>
     <script src="js/dev/i2037-client.js"></script>
