--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -64,7 +64,7 @@
             </div>            
             <ul class="nav">
               <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
-              <li ng-show="state == 'LOGGED_IN'" ng-class="{active: $location.path() == menu.path }" ng-repeat="menu in menus" ng-cloak>
+              <li ng-show="state == 'LOGGED_IN'" ng-class="{active: $location.path().indexOf(menu.path) > -1}" ng-repeat="menu in menus" ng-cloak>
                 <a href="#{{menu.path}}"><i class="icon-book"></i> {{menu.name}}</a>
               </li>
             </ul>
