changed to local angular file

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -97,7 +97,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/spin.min.js"></script> 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    <script src="js/angular.min.js"></script>
     <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.js"></script>
 <!-- @endif -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&sensor=false"></script>
