--- a/i2037-client/app/js/common/directives/timeline.tpl.html
+++ b/i2037-client/app/js/common/directives/timeline.tpl.html
@@ -1,3 +1,14 @@
 <table class="table">
-  <tbody></tbody>
+  <tbody>
+    <tr ng-repeat-start="entry in timeline" ng-if="isNewDay($index)" ng-init="isExpanded = false">
+      <td colspan="2"><h4>{{entry.date | date:"EEEE d MMMM"}}</h4></td>
+    </tr>
+    <tr ng-class="{info: isSelected(entry)}" ng-click="toggleSelect(entry)">
+      <td>{{entry.date | date:"HH:mm"}}</td>
+      <td><a ng-click="isExpanded = !isExpanded">{{entry.text}}</a></td>
+    </tr>
+    <tr ng-if="isExpanded" ng-repeat-end>
+      <td colspan="2" ng-transclude></td>
+    </tr>
+  </tbody>
 </table>
