--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -64,9 +64,9 @@
           <button type="button" class="btn btn-warning navbar-btn" ng-click="signUp()">Sign Up</button>            
         </div>            
         <ul class="nav navbar-nav">
-          <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><i class="icon-home"></i> Home</a></li>
+          <li ng-class="{active: $location.path() == '/home'}"><a href="#/home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li ng-show="state == 'LOGGED_IN'" ng-class="{active: $location.path().indexOf(menu.path) > -1}" ng-repeat="menu in menus" ng-cloak>
-            <a href="#{{menu.path}}"><i class="icon-book"></i> {{menu.name}}</a>
+            <a href="#{{menu.path}}"><span class="glyphicon glyphicon-book"></span> {{menu.name}}</a>
           </li>
         </ul>
       </div>
