--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -12,9 +12,6 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
-      [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-        display: none !important;
-      }
     </style>
    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,10 +34,10 @@
           <a class="navbar-brand" href="#">i2037</a>        
         </div>
 
-        <div class="navbar-collapse collapse" id="i2037-navbar-collapse" ng-switch="state" ng-cloak>
+        <div class="navbar-collapse collapse" id="i2037-navbar-collapse" ng-switch="state">
           <ul class="nav navbar-nav navbar-right" ng-switch-when="LOGGED_IN">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user.userName}} <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>{{user.userName}} <b class="caret"></b></a>
               <ul class="dropdown-menu" role="menu">
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Change Password</a></li>
@@ -61,8 +58,8 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="row" ng-view></div>
+    <div class="container" >
+      <div class="row" ng-view i2-spin-show="showSpinner" ng-controller="ViewChangeCtrl"></div>
 
       <hr>
 
