--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -37,7 +37,7 @@
         <div class="navbar-collapse collapse" id="i2037-navbar-collapse" ng-switch="state">
           <ul class="nav navbar-nav navbar-right" ng-switch-when="LOGGED_IN">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>{{user.userName}} <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak>Account <b class="caret"></b></a>
               <ul class="dropdown-menu" role="menu">
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Change Password</a></li>
@@ -45,7 +45,7 @@
             </li>
           </ul>
           <div class="nav navbar-nav navbar-right" ng-switch-default>
-            <button type="button" class="btn btn-primary navbar-btn" ng-click="login()">Log In</button>            
+            <button type="button" class="btn btn-primary navbar-btn" ng-click="login()">Login</button>            
             <button type="button" class="btn btn-warning navbar-btn" ng-click="signUp()">Sign Up</button>            
           </div>            
           <ul class="nav navbar-nav">
