--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -58,8 +58,13 @@
       </div>
     </nav>
 
-    <div class="container" >
-      <div class="row" ng-view i2-spin-show="showSpinner" ng-controller="ViewChangeCtrl"></div>
+    <div class="container" ng-controller="ViewPortCtrl">
+      <div class="row">
+        <div class="col-md-12">
+          <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+        </div>
+      </div>    
+      <div class="row" i2-spin-show="showViewSpinner" ng-view></div>
 
       <hr>
 
