renamed moves to journal-date

--- a/i2037-client/app/js/common/directives/day-summary.tpl.html
+++ b/i2037-client/app/js/common/directives/day-summary.tpl.html
@@ -1,6 +1,6 @@
 <p>An Event {{event.title}}</p>
 <table class="table table-bordered table-condensed">
     <tbody>
-        <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | activity }}</th><td>{{activity.duration}}</td></tr>
+        <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | movesActivity }}</th><td>{{activity.duration}}</td></tr>
     </tbody>
 </table>
