--- a/i2037-client/app/js/admin/login-form.tpl.html
+++ b/i2037-client/app/js/admin/login-form.tpl.html
@@ -1,8 +1,8 @@
-<div class="modal-header">
-  <h3>{{title}}</h3>
-</div>
-<div class="modal-body">
-  <form name="loginForm" class="form-horizontal" role="form">
+<form name="loginForm" class="form-horizontal" role="form" ng-submit="submit()">
+  <div class="modal-header">
+    <h3>{{title}}</h3>
+  </div>
+  <div class="modal-body">
     <div class="form-group" ng-class="getCls(loginForm.username)">
       <label class="control-label col-md-3" for="inputUsername">Email</label>
       <div class="input-group col-md-6">
@@ -28,10 +28,10 @@
           </label>        
         </div>
       </div>
-    </div>    
-  </form>
-</div>
-<div class="modal-footer">
-  <button ng-click="submit()" class="btn btn-primary">Submit</button>
-  <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
-</div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <input type="submit" id="submit" value="Submit" class="btn btn-primary"/>    
+    <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
+  </div>
+</form>
