--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -78,14 +78,14 @@
 <!-- @if NODE_ENV == 'DEV' -->  
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/spin.js"></script> 
+    <script src="js/deps.js"></script> 
     <script src="js/angular.js"></script>
     <script src="js/dev/i2037-client.js"></script>
 <!-- @endif -->
 <!-- @if NODE_ENV == 'PROD' -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/spin.min.js"></script> 
+    <script src="js/deps.min.js"></script> 
     <script src="js/angular.min.js"></script>
     <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.min.js"></script>
 <!-- @endif -->
