--- a/i2037-client/app/js/common/directives/day-summary.tpl.html
+++ b/i2037-client/app/js/common/directives/day-summary.tpl.html
@@ -1,9 +1,5 @@
-<div class="pull-right">
+<div class="pull-left i2-pie" data="event.distances" max="maxDistance" i2-pie></div>
+<div class="pull-right" ng-if="event.comments">
   <span class="glyphicon glyphicon-comment"></span>
   <span class="badge">{{event.comments}}</span>
 </div>
-<table class="table table-bordered table-condensed">
-    <tbody>
-        <tr ng-repeat="activity in summary.summary"><th>{{activity.activity | movesActivity }}</th><td>{{activity.duration}}</td></tr>
-    </tbody>
-</table>
