moved login and signup controllers out of app.js

--- a/i2037-client/app/js/admin/admin-signupform.tpl.html
+++ b/i2037-client/app/js/admin/admin-signupform.tpl.html
@@ -33,7 +33,7 @@
         <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="user.password" 
           ng-minlength="6" required>
       </div>
-      <p class="help-block col-md-offset-4" ng-show="showErr(signUpForm.password, 'minlength')">Paasword must have at least 6 chars</p>                                             
+      <p class="help-block col-md-offset-4" ng-show="showErr(signUpForm.password, 'minlength')">Password must have at least 6 chars</p>                                             
     </div>
     <div class="form-group" ng-class="getCls(signUpForm.password2)">
       <label class="control-label col-md-4" for="inputPassword2">Confirm Password</label>
