Restrict comments to 255 chars

--- a/i2037-client/app/js/common/directives/comment.tpl.html
+++ b/i2037-client/app/js/common/directives/comment.tpl.html
@@ -14,7 +14,8 @@
     <textarea class="form-control" placeholder="Enter comment..."    
       rows="{{textRows}}" 
       ng-focus="onTextFocus()"
-      ng-model="comment.text">
+      ng-model="comment.text"
+      maxlength="{{maxlength}}">
     </textarea>
     </div>
     <div ng-show="showActions">
