added app icons

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">	
-    <link href="css/fullcalendar.css" rel="stylesheet">      
+    <link href="css/fullcalendar.css" rel="stylesheet">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">    
+    <link href="img/chrome-icon-196x196.png" rel="icon" sizes="196x196">    
+    <link href="img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />      
+    <link href="img/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />          
     <style>
      body {
         padding-top: 60px;
