--- a/i2037-client/app/js/admin/admin-loginform.tpl.html
+++ b/i2037-client/app/js/admin/admin-loginform.tpl.html
@@ -1,11 +1,11 @@
-<form name="loginForm" class="form-horizontal" role="form" ng-submit="submit()">
-  <div class="modal-header">
+<div class="col-md-12">
+  <div class="page-header">
     <h3>{{title}}</h3>
   </div>
-  <div class="modal-body">
+  <form name="loginForm" class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group" ng-class="getCls(loginForm.username)">
       <label class="control-label col-md-3" for="inputUsername">Email</label>
-      <div class="input-group col-md-6">
+      <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
         <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="authDetails.userName" ng-readonly="authDetails.userNameReadonly" required>
       </div>
@@ -14,14 +14,14 @@
     </div>
     <div class="form-group" ng-class="getCls(loginForm.password)">
       <label class="control-label col-md-3" for="inputPassword">Password</label>
-      <div class="input-group col-md-6">
+      <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
         <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="authDetails.password" required>
       </div>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.password, 'required')">Password is required</p>              
     </div>
     <div class="form-group">
-      <div class="col-md-offset-3 col-md-6">
+      <div class="col-md-offset-3 col-md-4">
         <div class="checkbox">
           <label for="inputRememberMe">
             <input type="checkbox" id="inputRememberMe" ng-model="authDetails.rememberMe"> Remember me
@@ -29,9 +29,11 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="modal-footer">
-    <input type="submit" id="submit" value="Submit" class="btn btn-primary"/>    
-    <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
-  </div>
-</form>
+    <div class="form-group">
+      <div class="col-md-offset-3 col-md-4">
+        <input type="submit" id="submit" value="Login" class="btn btn-primary"/>    
+        <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
+      </div>
+    </div>
+  </form>
+</div>
