Hide comments on small devices

--- a/i2037-client/app/js/common/directives/day-summary.tpl.html
+++ b/i2037-client/app/js/common/directives/day-summary.tpl.html
@@ -1,6 +1,6 @@
 <div class="pull-left i2-pie" data="event.activities" max="maxDistance" 
   value-field="distance" colours="colours" i2-pie></div>
-<div class="pull-right" ng-if="event.comments">
+<div class="pull-right hidden-xs" ng-if="event.comments">
   <span class="glyphicon glyphicon-comment"></span>
   <span class="badge">{{event.comments}}</span>
 </div>
