--- a/i2037-client/app/js/admin/admin-loginform.tpl.html
+++ b/i2037-client/app/js/admin/admin-loginform.tpl.html
@@ -7,7 +7,7 @@
       <label class="control-label col-md-3" for="inputUsername">Email</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-        <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="authDetails.userName" ng-readonly="authDetails.userNameReadonly" required>
+        <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="userPM.userName" ng-readonly="userPM.userNameReadonly" required>
       </div>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'email')">Username must be an email address</p>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'required')">Username is required</p>  
@@ -16,7 +16,7 @@
       <label class="control-label col-md-3" for="inputPassword">Password</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="authDetails.password" required>
+        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" ng-model="userPM.password" required>
       </div>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.password, 'required')">Password is required</p>              
     </div>
@@ -24,7 +24,7 @@
       <div class="col-md-offset-3 col-md-4">
         <div class="checkbox">
           <label for="inputRememberMe">
-            <input type="checkbox" id="inputRememberMe" ng-model="authDetails.rememberMe"> Remember me
+            <input type="checkbox" id="inputRememberMe" ng-model="userPM.rememberMe"> Remember me
           </label>        
         </div>
       </div>
