--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -44,7 +44,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-cloak><span class="glyphicon glyphicon-user"></span> <b class="caret"></b></a>
               <ul class="dropdown-menu" role="menu">
                 <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Logout</a></li>
-                <li ng-show="user"><a tabindex="-1" href="#" ng-click="logout()">Change Password</a></li>
+                <li ng-show="user"><a tabindex="-1" href="#" ng-click="changePassword()">Change Password</a></li>
               </ul>
             </li>
           </ul>
