--- a/i2037-client/app/js/admin/admin-loginform.tpl.html
+++ b/i2037-client/app/js/admin/admin-loginform.tpl.html
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
       <div class="col-md-offset-3 col-md-4">
-        <input type="submit" id="submit" value="Login" class="btn btn-primary"/>    
+        <input type="submit" id="submit" value="{{title}}" class="btn btn-primary"/>    
         <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
       </div>
     </div>
