--- a/i2037-client/app/js/admin/admin-loginform.tpl.html
+++ b/i2037-client/app/js/admin/admin-loginform.tpl.html
@@ -1,13 +1,13 @@
 <div class="col-md-12">
   <div class="page-header">
-    <h3>{{title}}</h3>
+    <h3>Login</h3>
   </div>
   <form name="loginForm" class="form-horizontal" role="form" ng-submit="submit()">
     <div class="form-group" ng-class="getCls(loginForm.username)">
       <label class="control-label col-md-3" for="inputUsername">Email</label>
       <div class="input-group col-md-4">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-        <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="userPM.userName" ng-readonly="userPM.userNameReadonly" required>
+        <input type="email" class="form-control" id="inputUsername" name="username" placeholder="Username" ng-model="userPM.userName" required>
       </div>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'email')">Username must be an email address</p>
       <p class="help-block col-md-offset-3" ng-show="showErr(loginForm.username, 'required')">Username is required</p>  
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
       <div class="col-md-offset-3 col-md-4">
-        <input type="submit" id="submit" value="{{title}}" class="btn btn-primary"/>    
+        <input type="submit" id="submit" value="Login" class="btn btn-primary"/>    
         <button ng-click="cancel()" class="btn btn-default">Cancel</button>  
       </div>
     </div>
