added mock pricing, lock button and bar charts

--- a/i2037-client/app/js/fx/directives/vwap-tiles.tpl.html
+++ b/i2037-client/app/js/fx/directives/vwap-tiles.tpl.html
@@ -1,11 +1,11 @@
 <div class="x-tiles-box">
   <div class="x-tile-box x-tile-box-left">
-    <i2-tile>
+    <i2-tile state="quote.state">
       <div class="x-side x-side-left">
         <div>SELL</div>
         <div>{{quote.enteredCcy}}</div>
       </div>
-      <i2-price-big></i2-price-big>
+      <i2-price-vwap></i2-price-vwap>
       <div class="x-price x-price-left">
         <div>{{quote.sellPx.fwdPts}}</div>                  
         <div>{{quote.sellPx.allIn.raw}}</div>
@@ -13,12 +13,12 @@
     </i2-tile>
   </div>
   <div class="x-tile-box x-tile-box-right">
-    <i2-tile>
+    <i2-tile state="quote.state">
       <div class="x-side x-side-right">
         <div>BUY</div>
         <div>{{quote.enteredCcy}}</div>
       </div>
-      <i2-price-big></i2-price-big>
+      <i2-price-vwap></i2-price-vwap>
       <div class="x-price x-price-right">
         <div>{{quote.buyPx.fwdPts}}</div>                  
         <div>{{quote.buyPx.allIn.raw}}</div>
