--- a/i2037-client/app/js/fx/directives/wing.tpl.html
+++ b/i2037-client/app/js/fx/directives/wing.tpl.html
@@ -1,11 +1,11 @@
-<div class="x-wing">
+<div>
   <div class="x-normal-amt-box">
-    <i2-tile>
+    <i2-tile state="quote.state">
       <div class="x-price x-price-normal-amt">
-        <div>1.32647</div>
+        <div>1.32<span class="x-price-normal-amt-pips">64</span>7</div>
         <div>5,000,000</div>
       </div>
     </i2-tile>
   </div>
-  <div></div>
+  <div ng-transclude></div>
 </div>
