--- a/i2037-client/app/js/fx/directives/quote-panel.tpl.html
+++ b/i2037-client/app/js/fx/directives/quote-panel.tpl.html
@@ -1,13 +1,31 @@
   <div class="x-quote-panel">
-    <div class="x-title-bar">{{quote.ccyPair}}</div>
+    <div class="x-title-bar">
+      <button type="button" class="btn btn-default btn-xs" ng-click="toggleLock()">
+        <span class="glyphicon glyphicon-lock"></span>
+      </button> {{quote.ccyPair}}
+    </div>
     <div class="x-row">
-      <i2-wing class="x-wing-left">
+      <i2-wing class="x-wing x-wing-left">
+        <table>
+          <tr ng-repeat="rung in quote.buy">
+            <td i2-depth-chart data="rung.amts" max="12" align="right"></td>
+            <td class="x-amt">{{rung.cumQty}}</td>
+            <td>{{rung.px}}</td>
+          </tr>            
+        </table>            
       </i2-wing>
       <div class="x-center-col">
-        <i2-vwap-panels quote="quote"></i2-vwap-panels>
+        <i2-vwap-tiles quote="quote"></i2-vwap-tiles>
         <!-- quick ticket goes here -->
       </div>
-      <i2-wing class="x-wing-right">
+      <i2-wing class="x-wing x-wing-right">
+        <table>
+          <tr ng-repeat="rung in quote.sell">
+            <td>{{rung.px}}</td>
+            <td class="x-amt">{{rung.cumQty}}</td>
+            <td i2-depth-chart data="rung.amts" max="12" align="left"></td>
+          </tr>            
+        </table>      
       </i2-wing>
     </div>
   </div>
