added pricing facade and unit tests

--- a/i2037-client/app/js/fx/directives/price-vwap.tpl.html
+++ b/i2037-client/app/js/fx/directives/price-vwap.tpl.html
@@ -1,7 +1,7 @@
 <div class="x-price x-price-vwap">
-  <div>{{px.prefix}}</div>
+  <div>{{px.getPrefix()}}</div>
   <div>
-    <span class="x-price-vwap-pips">{{px.pips}}</span>
-    <span class="x-price-vwap-decimals">{{px.decimals}}</span>
+    <span class="x-price-vwap-pips">{{px.getPips()}}</span>
+    <span class="x-price-vwap-decimals">{{px.getDecimals()}}</span>
   </div>
 </div>
