fixed buy side normal amt

--- a/i2037-client/app/js/fx/directives/quote-panel.tpl.html
+++ b/i2037-client/app/js/fx/directives/quote-panel.tpl.html
@@ -5,27 +5,47 @@
       </button> {{quote.ccyPair}}
     </div>
     <div class="x-row">
-      <i2-wing class="x-wing x-wing-left">
-        <table>
-          <tr ng-repeat="rung in quote.sell.rungs">
-            <td i2-depth-chart data="rung.amts" max="quote.sell.maxAmt" align="right"></td>
-            <td class="x-amt">{{rung.totalAmt}}</td>
-            <td>{{rung.px.getPips()}}</td>
-          </tr>            
-        </table>            
-      </i2-wing>
+      <div class="x-wing x-wing-left">
+        <div class="x-normal-amt-box">
+          <i2-tile state="quote.state">
+            <div class="x-price x-price-normal-amt">
+              <div>{{quote.sellNormAmtVwap.getPrefix()}}<span class="x-price-normal-amt-pips">{{quote.sellNormAmtVwap.getPips()}}</span>{{quote.sellNormAmtVwap.getDecimals()}}</div>
+              <div>{{quote.sellNormAmtVwap.amt}}</div>
+            </div>
+          </i2-tile>
+        </div>  
+        <i2-wing>
+          <table>
+            <tr ng-repeat="rung in quote.sell.rungs">
+              <td i2-depth-chart data="rung.amts" max="quote.sell.maxAmt" align="right"></td>
+              <td class="x-amt">{{rung.totalAmt}}</td>
+              <td>{{rung.px.getPips()}}</td>
+            </tr>            
+          </table>            
+        </i2-wing>
+      </div>
       <div class="x-center-col">
         <i2-vwap-tiles quote="quote"></i2-vwap-tiles>
         <!-- quick ticket goes here -->
       </div>
-      <i2-wing class="x-wing x-wing-right">
-        <table>
-          <tr ng-repeat="rung in quote.buy.rungs">
-            <td>{{rung.px.getPips()}}</td>
-            <td class="x-amt">{{rung.totalAmt}}</td>
-            <td i2-depth-chart data="rung.amts" max="quote.buy.maxAmt" align="left"></td>
-          </tr>            
-        </table>      
-      </i2-wing>
+      <div class="x-wing x-wing-right">
+        <div class="x-normal-amt-box">
+          <i2-tile state="quote.state">
+            <div class="x-price x-price-normal-amt">
+              <div>{{quote.buyNormAmtVwap.getPrefix()}}<span class="x-price-normal-amt-pips">{{quote.buyNormAmtVwap.getPips()}}</span>{{quote.buyNormAmtVwap.getDecimals()}}</div>
+              <div>{{quote.buyNormAmtVwap.amt}}</div>
+            </div>
+          </i2-tile>
+        </div>
+        <i2-wing>
+          <table>
+            <tr ng-repeat="rung in quote.buy.rungs">
+              <td>{{rung.px.getPips()}}</td>
+              <td class="x-amt">{{rung.totalAmt}}</td>
+              <td i2-depth-chart data="rung.amts" max="quote.buy.maxAmt" align="left"></td>
+            </tr>            
+          </table>      
+        </i2-wing>
+      </div>
     </div>
   </div>
