--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -93,6 +93,6 @@
     <script src="js/angular.min.js"></script>
     <script src="js/<!-- @echo i2037_VERSION -->/i2037-client.min.js"></script>
 <!-- @endif -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&amp;sensor=false"></script>
 </body>
 </html>
